--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 baseURL = 'https://info.xbetaa.com/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
-theme = 'PaperMod'
+theme = 'paper'
 
 [services]
   [services.disqus]
