--- a/hugo.toml
+++ b/hugo.toml
@@ -16,5 +16,5 @@ theme = 'paper'
   category = 'General'
   categoryId = 'DIC_kwDOOShVSc4Cos4E'
   mapping = 'pathname'
-  theme = 'light'
+  theme = 'dark'
   lang = 'zh-CN'
